# RevitaModdingAPI

./: .gitignore  .gitmodules  CMakeLists.txt  local_config.cmake.example
core_mod/: CMakeLists.txt  RevitaCoreMod.cpp
example_mod/: CMakeLists.txt  RevitaMod.cpp
include/: RevitaMod.h  RevitaMod.hpp
lib/: CMakeLists.txt
lib/patches/Aurie/: shared.hpp
lib/patches/FunctionWrapper/: FunctionWrapper.hpp
lib/patches/YYToolkit/: YYTK_Shared.hpp  YYTK_Shared_Base.hpp  YYTK_Shared_Interface.hpp  YYTK_Shared_Types.hpp
loader/: Loader.cpp  Loader.hpp  dllmain.cpp
loader/Console/: Console.cpp  Console.hpp
proxy/: README.md  proxy.cpp
